--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -112,9 +112,6 @@
     "viewHistory": "查看历史",
     "curriculum": "课程大纲",
     "unit": "单元",
-    "units": {
-      "label": "单元"
-    },
     "demos": {
       "label": "演示"
     },
@@ -131,6 +128,7 @@
       "community": "研究社区"
     },
     "units": {
+      "label": "单元",
       "unit1": {
         "title": "光的偏振态及其调制和测量",
         "subtitle": "横波、双折射、偏振器件与马吕斯定律",
@@ -591,7 +589,7 @@
       "stokes": {
         "title": "Stokes参数计算器",
         "subtitle": "完整偏振态",
-        "description": "计算和转换Stokes参数（S₀, S₁, S₂, S₃）、椭圆参数和偏振度。实验偏振测量的必备工具。",
+        "description": "计算和转换Stokes参数（$S_0$, $S_1$, $S_2$, $S_3$）、椭圆参数和偏振度。实验偏振测量的必备工具。",
         "stokesFeature1": "完整Stokes向量分析",
         "stokesFeature2": "偏振度计算",
         "stokesFeature3": "椭圆参数提取"
@@ -771,7 +769,7 @@
       "scroll": "缩放（等轴测/俯视模式）",
       "fourAxioms": "偏振光四大公理",
       "orthogonal": "正交不干涉：0°和90°的光可以共存互不影响",
-      "malus": "马吕斯定律：光通过偏振片时，强度 = 原强度 × cos²(角度差)",
+      "malus": "马吕斯定律：光通过偏振片时，强度 = 原强度 × $\\cos^2(\\theta)$",
       "birefringence": "双折射：方解石将光分裂成两束垂直的光",
       "interference": "干涉叠加：同相叠加变亮，反相抵消变暗",
       "blockGuide": "方块说明",
@@ -833,7 +831,7 @@
         "description": "使用偏振片过滤光线并激活传感器",
         "hints": [
           "在发射器和传感器之间放置偏振片",
-          "马吕斯定律：I = I₀ × cos²(θ)",
+          "马吕斯定律：$I = I_0 \\times \\cos^2(\\theta)$",
           "尝试不同角度观察强度变化"
         ]
       },
@@ -902,7 +900,7 @@
       "physics": {
         "principle": "偏振态由两个正交电场分量的振幅比和相位差决定",
         "principle_foundation": "想象光是在跳绳——可以上下跳（线偏振）、转圈跳（圆偏振）、或者画椭圆跳（椭圆偏振）。怎么跳取决于两条绳子配合的节奏！",
-        "principle_research": "任意完全偏振态可由Jones矢量 J = [Ex·e^(iδx), Ey·e^(iδy)]^T 精确描述。偏振态在Poincaré球面上的位置由Stokes参数 (S₁, S₂, S₃) 唯一确定，满足 S₀² = S₁² + S₂² + S₃²。",
+        "principle_research": "任意完全偏振态可由Jones矢量 $J = [E_x e^{i\\delta_x}, E_y e^{i\\delta_y}]^T$ 精确描述。偏振态在Poincaré球面上的位置由Stokes参数 $(S_1, S_2, S_3)$ 唯一确定，满足 $S_0^2 = S_1^2 + S_2^2 + S_3^2$。",
         "formula": "E = Ex·cos(ωt) x̂ + Ey·cos(ωt+δ) ŷ",
         "details": [
           "当 δ=0° 或 180° 时为线偏振",
@@ -918,7 +916,7 @@
           "偏振态空间构成SU(2)群的表示，与量子力学中自旋-1/2系统同构",
           "Mueller-Jones定理建立了Mueller矩阵与Jones矩阵的对应关系",
           "部分偏振态需用密度矩阵或Stokes参数完整描述",
-          "偏振度定义为 DOP = √(S₁² + S₂² + S₃²) / S₀"
+          "偏振度定义为 $\\mathrm{DOP} = \\dfrac{\\sqrt{S_1^2 + S_2^2 + S_3^2}}{S_0}$"
         ]
       },
       "experiment": {
@@ -981,14 +979,14 @@
     },
     "malus": {
       "title": "马吕斯定律",
-      "description": "偏振光通过偏振片时的强度变化规律：I = I₀ × cos²(θ)",
+      "description": "偏振光通过偏振片时的强度变化规律：$I = I_0 \\times \\cos^2(\\theta)$",
       "questions": {
         "leading": "为什么旋转偏振片会让光线逐渐变暗而不是瞬间消失？",
         "leading_foundation": "你有没有戴着太阳镜歪头看手机？为什么屏幕有时候会变暗？",
-        "leading_research": "电场矢量在偏振片轴上的投影如何导致cos²θ的强度依赖关系？",
+        "leading_research": "电场矢量在偏振片轴上的投影如何导致 $\\cos^2(\\theta)$ 的强度依赖关系？",
         "guided": [
           "当偏振片角度与偏振方向相差45°时，光强会发生什么变化？",
-          "为什么光强遵循cos²关系而不是线性关系？"
+          "为什么光强遵循 $\\cos^2(\\theta)$ 关系而不是线性关系？"
         ],
         "guided_foundation": [
           "当你把两副太阳镜叠在一起并旋转其中一副时，亮度会怎样变化？",
@@ -1038,8 +1036,8 @@
       "physics": {
         "principle": "偏振光通过偏振片时的强度变化遵循马吕斯定律",
         "principle_foundation": "偏振片就像一扇有竖条栅栏的门——如果光「躺着」进来，就能顺利通过；如果「站着」进来，就会被挡住。斜着进来？能过去一部分！",
-        "principle_research": "Malus定律是电磁波在各向异性介质中传播的宏观表现。从量子电动力学角度，光子的偏振态投影到检偏器本征态上，探测概率由 |⟨ψ_detector|ψ_photon⟩|² 给出，恰为 cos²θ。",
-        "formula": "I = I₀ × cos²(θ)",
+        "principle_research": "Malus定律是电磁波在各向异性介质中传播的宏观表现。从量子电动力学角度，光子的偏振态投影到检偏器本征态上，探测概率由 $|\\langle\\psi_{detector}|\\psi_{photon}\\rangle|^2$ 给出，恰为 $\\cos^2(\\theta)$。",
+        "formula": "$I = I_0 \\times \\cos^2(\\theta)$",
         "details": [
           "θ 为光偏振方向与偏振片透光轴夹角",
           "平行时(θ=0°)透过率最大",
@@ -1051,9 +1049,9 @@
           "LCD屏幕就是这样控制亮度的——每个像素独立调节！"
         ],
         "details_research": [
-          "cos²依赖性源于电场矢量在偏振片透光轴上的投影",
+          "$\\cos^2(\\theta)$ 依赖性源于电场矢量在偏振片透光轴上的投影",
           "多个偏振片串联遵循强度乘法递减规律",
-          "量子力学角度：单光子要么通过要么被吸收，cos²θ是通过概率"
+          "量子力学角度：单光子要么通过要么被吸收，$\\cos^2(\\theta)$ 是通过概率"
         ]
       },
       "experiment": {
@@ -1062,7 +1060,7 @@
         "details": [
           "旋转检偏器测量透射光强",
           "使用光电探测器定量测量",
-          "可验证 cos² 关系曲线"
+          "可验证 $\\cos^2(\\theta)$ 关系曲线"
         ]
       },
       "frontier": {
@@ -1087,7 +1085,7 @@
           "慢慢将其中一副旋转90°——光线完全消失！",
           "尝试中间角度（30°、45°、60°）观察渐变效果"
         ],
-        "observation": "旋转45°时，光强减少到50%——正如马吕斯定律预测的那样（cos²45° = 0.5）"
+        "observation": "旋转45°时，光强减少到50%——正如马吕斯定律预测的那样（$\\cos^2 45^\\\u00b0 = 0.5$）"
       }
     },
     "birefringence": {
@@ -1149,8 +1147,8 @@
       "physics": {
         "principle": "双折射晶体将入射光分裂为寻常光(o光)和非寻常光(e光)",
         "principle_foundation": "有些神奇的晶体像「分身术」——一束光进去，变成两束出来！就像透过冰洲石看字，每个字都变成了双胞胎，而且这两个双胞胎的「振动方向」还不一样。",
-        "principle_research": "各向异性晶体中，介电张量的本征方向定义了光学主轴。o光折射率恒定（no），e光折射率ne(θ)随传播方向与光轴夹角变化：1/ne²(θ) = cos²θ/no² + sin²θ/ne²。这导致o光和e光在晶体内沿不同路径传播，产生空间分离。",
-        "formula": "Io = I₀·cos²(θ), Ie = I₀·sin²(θ)",
+        "principle_research": "各向异性晶体中，介电张量的本征方向定义了光学主轴。o光折射率恒定（$n_o$），e光折射率 $n_e(\\theta)$ 随传播方向与光轴夹角变化：$\\dfrac{1}{n_e^2(\\theta)} = \\dfrac{\\cos^2\\theta}{n_o^2} + \\dfrac{\\sin^2\\theta}{n_e^2}$。这导致o光和e光在晶体内沿不同路径传播，产生空间分离。",
+        "formula": "$I_o = I_0 \\cdot \\cos^2(\\theta),\\; I_e = I_0 \\cdot \\sin^2(\\theta)$",
         "details": [
           "o光和e光的偏振方向互相垂直",
           "两光传播速度不同造成相位差",
@@ -1260,8 +1258,8 @@
       "physics": {
         "principle": "波片利用双折射效应引入可控的相位延迟",
         "principle_foundation": "波片就像一条「慢车道」——让光的一个方向的振动比另一个方向慢一点。这一点点延迟，就能把直线振动的光变成螺旋转圈的光！",
-        "principle_research": "波片是精确控制相位延迟的双折射光学元件。Jones矩阵为 M = R(-θ)·[[1,0],[0,e^(iδ)]]·R(θ)，其中θ为快轴方位角。对于λ/4波片（δ=π/2），输入45°线偏振时输出Jones矢量为 [1, ±i]^T/√2，对应圆偏振态。",
-        "formula": "δ = 2π(ne-no)d/λ",
+        "principle_research": "波片是精确控制相位延迟的双折射光学元件。Jones矩阵为 $M = R(-\\theta)\\begin{pmatrix}1 & 0\\\\0 & e^{i\\delta}\\end{pmatrix}R(\\theta)$，其中 $\\theta$ 为快轴方位角。对于 $\\lambda/4$ 波片（$\\delta=\\pi/2$），输入 $45^\\circ$ 线偏振时输出Jones矢量为 $[1,\\pm i]^T/\\sqrt{2}$，对应圆偏振态。",
+        "formula": "$\\delta = \\dfrac{2\\pi (n_e - n_o) d}{\\lambda}$",
         "details": [
           "四分之一波片：δ = π/2 (90°)",
           "二分之一波片：δ = π (180°)",
@@ -1282,8 +1280,8 @@
         "title": "波片偏振态转换",
         "example": "使用波片产生不同偏振态",
         "details": [
-          "45°线偏振 + λ/4波片 = 圆偏振",
-          "λ/2波片可将偏振方向旋转2θ",
+          "$45^\\circ$ 线偏振 + $\\lambda/4$ 波片 = 圆偏振",
+          "$\\lambda/2$ 波片可将偏振方向旋转 $2\\theta$",
           "组合波片可产生任意偏振态"
         ]
       },
@@ -1348,8 +1346,8 @@
       "physics": {
         "principle": "菲涅尔方程描述光在界面的反射和透射系数",
         "principle_foundation": "当光遇到玻璃或水面时，一部分被反射，一部分透过去。有趣的是：斜着照过去时，「左右振动」的光比「上下振动」的光更容易被反射回来！",
-        "principle_research": "菲涅尔方程由Maxwell方程组在界面的切向连续性条件严格导出。对于非磁性材料，振幅反射系数 rₛ = (n₁cosθᵢ - n₂cosθₜ)/(n₁cosθᵢ + n₂cosθₜ)，rₚ = (n₂cosθᵢ - n₁cosθₜ)/(n₂cosθᵢ + n₁cosθₜ)。反射率R = |r|²，能量守恒要求 R + T = 1（无吸收时）。",
-        "formula": "rs = (n₁cosθᵢ-n₂cosθₜ)/(n₁cosθᵢ+n₂cosθₜ)",
+        "principle_research": "菲涅尔方程由Maxwell方程组在界面的切向连续性条件严格导出。对于非磁性材料，振幅反射系数 $r_s = \\dfrac{n_1 \\cos\\theta_i - n_2 \\cos\\theta_t}{n_1 \\cos\\theta_i + n_2 \\cos\\theta_t}$，$r_p = \\dfrac{n_2 \\cos\\theta_i - n_1 \\cos\\theta_t}{n_2 \\cos\\theta_i + n_1 \\cos\\theta_t}$。反射率 $R = |r|^2$，能量守恒要求 $R + T = 1$（无吸收时）。",
+        "formula": "$r_s = \\dfrac{n_1 \\cos\\theta_i - n_2 \\cos\\theta_t}{n_1 \\cos\\theta_i + n_2 \\cos\\theta_t}$",
         "details": [
           "s偏振和p偏振的反射率不同",
           "存在全内反射临界角",
@@ -1361,7 +1359,7 @@
           "角度越斜，反射越强——这就是日落湖面特别亮的原因"
         ],
         "details_research": [
-          "全内反射时产生倏逝波，穿透深度约为λ/2π√(sin²θ - n²)",
+          "全内反射时产生倏逝波，穿透深度约为 $\\dfrac{\\lambda}{2\\pi\\sqrt{\\sin^2\\theta - n^2}}$",
           "复数折射率（金属）导致椭圆偏振反射光",
           "表面等离激元共振发生在 εₘ = -εd 条件下"
         ]
@@ -1402,10 +1400,10 @@
           "斜着看（像日落时）：超过50束光反射回来！",
           "所以渔民戴偏光眼镜——能穿透反射看到鱼"
         ],
-        "facts_research": [
-          "空气-水界面菲涅尔反射率：R₀ = 2%（垂直），R₈₀° = 35%（s偏振），R₈₅° > 50%",
-          "在临界角（水为48.6°）处开始全内反射",
-          "薄膜干涉镀膜利用菲涅尔方程实现R < 0.1%"
+          "facts_research": [
+          "空气-水界面菲涅尔反射率：$R_0 = 2\\%$（垂直），$R_{80^\\circ} = 35\\%$（s偏振），$R_{85^\\circ} > 50\\%$",
+          "在临界角（水为 $48.6^\\circ$）处开始全内反射",
+          "薄膜干涉镀膜利用菲涅尔方程实现 $R < 0.1\\%$"
         ]
       },
       "diy": {
@@ -1464,7 +1462,7 @@
         "imageAlt": "橱窗摄影前后对比：有反光 vs 使用偏振滤镜后的干净照片",
         "hook": "试过透过窗户拍照却只拍到反光吗？专业摄影师有个简单的解决方案——偏振滤镜！",
         "hook_foundation": "想透过窗户拍照但只看到反光？有一个神奇角度能让反光完全消失——摄影师都知道这个技巧！",
-        "hook_research": "在布儒斯特角，反射光线与折射光线垂直（θᵢ + θₜ = 90°）。由于振荡偶极子不能沿其振荡轴辐射，p偏振光反射为零——激光布儒斯特窗利用这一原理实现每个表面<0.01%的损耗。",
+        "hook_research": "在布儒斯特角，反射光线与折射光线垂直（$\\theta_i + \\theta_t = 90^\\circ$）。由于振荡偶极子不能沿其振荡轴辐射，p偏振光反射为零——激光布儒斯特窗利用这一原理实现每个表面<0.01%的损耗。",
         "facts": [
           "在布儒斯特角（水约53°，玻璃约56°），反射光100%偏振",
           "一个简单的偏振滤镜可以完全消除这种眩光",
@@ -1484,8 +1482,8 @@
       "physics": {
         "principle": "布儒斯特角是p偏振反射率为零的入射角",
         "principle_foundation": "存在一个神奇角度，叫布儒斯特角——在这个角度，「前后振动」的光全部穿过去，一点反射都没有！只有「左右振动」的光才会被弹回来。",
-        "principle_research": "布儒斯特角源于p偏振的特殊边界条件：当反射光与折射光垂直（θᵢ + θₜ = 90°）时，界面偶极子辐射方向与反射方向重合，导致rₚ = 0。结合Snell定律得 tan(θB) = n₂/n₁。此时反射光偏振度P = (Rs - Rp)/(Rs + Rp) = 1，为完全s偏振。",
-        "formula": "tan(θB) = n₂/n₁",
+        "principle_research": "布儒斯特角源于p偏振的特殊边界条件：当反射光与折射光垂直（$\\theta_i + \\theta_t = 90^\\circ$）时，界面偶极子辐射方向与反射方向重合，导致 $r_p = 0$。结合Snell定律得 $\\tan(\\theta_B) = n_2 / n_1$。此时反射光偏振度 $P = (R_s - R_p)/(R_s + R_p) = 1$，为完全s偏振。",
+        "formula": "$\\tan(\\theta_B) = n_2 / n_1$",
         "details": [
           "此角度下反射光为完全s偏振",
           "折射光和反射光垂直",
@@ -1820,8 +1818,8 @@
       "physics": {
         "principle": "各向异性材料的折射率取决于光传播方向和偏振方向",
         "principle_foundation": "有些材料很「挑剔」——光从不同方向进去，或者振动方向不同，速度就不一样。这就像某些路只让特定车道的车跑得快，产生了神奇的双像效果！",
-        "principle_research": "光学各向异性由介电张量的非对角元描述。单轴晶体的折射率椭球为 x²/no² + y²/no² + z²/ne² = 1，给出任意传播方向的两个主折射率。双轴晶体需要三个主折射率(nα < nβ < nγ)描述，存在两个光轴方向使o光与e光简并。",
-        "formula": "n(θ) = no·ne / √(no²sin²θ + ne²cos²θ)",
+        "principle_research": "光学各向异性由介电张量的非对角元描述。单轴晶体的折射率椭球为 $\\dfrac{x^2}{n_o^2} + \\dfrac{y^2}{n_o^2} + \\dfrac{z^2}{n_e^2} = 1$，给出任意传播方向的两个主折射率。双轴晶体需要三个主折射率 ($n_\\alpha < n_\\beta < n_\\gamma$) 描述，存在两个光轴方向使 o 光与 e 光简并。",
+        "formula": "$n(\\theta) = \\dfrac{n_o n_e}{\\sqrt{n_o^2 \\sin^2\\theta + n_e^2 \\cos^2\\theta}}$",
         "details": [
           "各向同性材料：各方向性质相同（玻璃、水）",
           "单轴晶体：一个光轴，两个主折射率（方解石、石英）",
@@ -1834,8 +1832,8 @@
         ],
         "details_research": [
           "锥光干涉法可测定光轴取向和光性符号（正/负晶体）",
-          "应力-光弹系数C连接应力张量σᵢⱼ与感应双折射Δn = C·(σ₁ - σ₂)",
-          "液晶介电各向异性Δε = ε∥ - ε⊥决定阈值电压和响应时间"
+          "应力-光弹系数 C 连接应力张量 $\\sigma_{ij}$ 与感应双折射 $\\Delta n = C \\cdot (\\sigma_1 - \\sigma_2)$",
+          "液晶介电各向异性 $\\Delta\\varepsilon = \\varepsilon_{\\parallel} - \\varepsilon_{\\perp}$ 决定阈值电压和响应时间"
         ]
       },
       "experiment": {
@@ -1991,7 +1989,7 @@
       "questions": {
         "leading": "为什么白天天空是蓝色的，但日落时却变成红色和橙色？",
         "leading_foundation": "天空为什么是蓝色的？太阳明明是白色的啊！而且日落为什么又变红了？",
-        "leading_research": "感应偶极子的辐射功率如何解释瑞利散射的λ⁻⁴波长依赖性及其90°方向的完全偏振？",
+        "leading_research": "感应偶极子的辐射功率如何解释瑞利散射的 $\\lambda^{-4}$ 波长依赖性及其 $90^\\circ$ 方向的完全偏振？",
         "guided": [
           "为什么大气中蓝光比红光散射更强？",
           "什么导致日落时天空呈现红/橙色？"
@@ -2026,7 +2024,7 @@
         "hook_foundation": "早上蓝天、傍晚红霞——一天里天空怎么变来变去的？答案藏在阳光走的路有多远！",
         "hook_research": "日落时的红色光谱反映了大气光学厚度的指数衰减特性。当太阳天顶角增大，光程增加约38倍（从1到1/cos(87°)），蓝光被完全散射，仅剩长波透射。",
         "facts": [
-          "蓝光的散射强度约是红光的10倍（这就是1/λ⁴定律）",
+          "蓝光的散射强度约是红光的10倍（这就是 $1/\\lambda^{4}$ 定律）",
           "日落时，光穿过更多大气层，散射掉所有蓝光",
           "火星有不同的大气——它的天空是奶油色的，日落是蓝色的！"
         ],
@@ -2036,16 +2034,16 @@
           "火星的天空是粉红色的！因为它的空气成分和地球不一样"
         ],
         "facts_research": [
-          "瑞利散射截面 σ ∝ λ⁻⁴，波长400nm的散射强度是700nm的9.4倍",
-          "大气散射光学厚度τ_R ≈ 0.1(λ/500nm)⁻⁴，决定天空亮度的海拔依赖性",
+          "瑞利散射截面 $\\sigma \\propto \\lambda^{-4}$，波长400nm的散射强度是700nm的9.4倍",
+          "大气散射光学厚度 $\\tau_R \\approx 0.1 (\\lambda/500\\mathrm{nm})^{-4}$，决定天空亮度的海拔依赖性",
           "火星的奶油色天空源于悬浮尘埃的米氏散射，而非分子瑞利散射"
         ]
       },
       "physics": {
-        "principle": "粒径远小于波长时的散射，强度与λ⁻⁴成正比",
+        "principle": "粒径远小于波长时的散射，强度与 $\\lambda^{-4}$ 成正比",
         "principle_foundation": "空气中的小分子「喜欢」蓝光胜过红光——蓝光被它们踢来踢去，散射到四面八方，所以我们抬头看到蓝天。红光太「重」了，基本直接穿过去。",
         "principle_research": "瑞利散射描述粒径a << λ时的弹性散射，截面 σ ∝ (a/λ)⁴ 源于感应偶极子辐射功率与ω⁴成正比。散射强度的角度分布服从(1 + cos²θ)，90°散射光为完全线偏振。散射光的偏振度与观测角度相关，在90°达到最大。",
-        "formula": "I ∝ 1/λ⁴",
+        "formula": "$I \\propto \\lambda^{-4}$",
         "details": [
           "短波长(蓝光)散射更强",
           "这是天空呈蓝色的原因",
@@ -2217,13 +2215,13 @@
       "physics": {
         "principle": "斯托克斯矢量用四个参数完整描述偏振态",
         "principle_foundation": "想象你要完整描述一束光的「振动方式」。只需要四个数字：亮度多少？偏水平还是垂直？偏45°还是-45°？是顺时针转还是逆时针转？这就是斯托克斯矢量！",
-        "principle_research": "Stokes矢量S = [S₀, S₁, S₂, S₃]ᵀ由电场的时间平均二阶统计量定义：S₀ = <|Ex|²> + <|Ey|²>，S₁ = <|Ex|²> - <|Ey|²>，S₂ = 2Re<ExEy*>，S₃ = 2Im<ExEy*>。偏振度DOP = √(S₁² + S₂² + S₃²)/S₀ ≤ 1，等于1为完全偏振态。Poincaré球上(S₁, S₂, S₃)的归一化坐标唯一对应一个偏振态。",
-        "formula": "S = [S₀, S₁, S₂, S₃]ᵀ",
+        "principle_research": "Stokes矢量 $S = [S_0, S_1, S_2, S_3]^T$ 由电场的时间平均二阶统计量定义：$S_0 = \\langle |E_x|^2 \\rangle + \\langle |E_y|^2 \\rangle$, $S_1 = \\langle |E_x|^2 \\rangle - \\langle |E_y|^2 \\rangle$, $S_2 = 2\\mathrm{Re}\\langle E_x E_y^* \\rangle$, $S_3 = 2\\mathrm{Im}\\langle E_x E_y^* \\rangle$. 偏振度 $\\mathrm{DOP} = \\sqrt{S_1^2 + S_2^2 + S_3^2}/S_0 \\le 1$，等于1为完全偏振态。Poincaré球上 $(S_1, S_2, S_3)$ 的归一化坐标唯一对应一个偏振态。",
+        "formula": "$S = [S_0, S_1, S_2, S_3]^T$",
         "details": [
-          "S₀: 总光强",
-          "S₁: 水平vs垂直偏振",
-          "S₂: +45°vs-45°偏振",
-          "S₃: 右旋vs左旋圆偏振"
+          " $S_0$ : 总光强",
+          " $S_1$: 水平vs垂直偏振",
+          " $S_2$: +45°vs-45°偏振",
+          " $S_3$: 右旋vs左旋圆偏振"
         ],
         "details_foundation": [
           "S₀告诉你光有多亮",
@@ -2611,7 +2609,7 @@
         "imageAlt": "激光光学系统中偏振片和波片的精密排列",
         "hook": "激光器如何精确控制输出光的偏振态？答案藏在一组简单的2×2矩阵中。",
         "hook_foundation": "科学家能让激光「听话」地左转右转、变来变去——就像用魔法指令控制光！这些指令就是Jones矩阵。",
-        "hook_research": "高精度激光系统（如引力波探测器LIGO）依赖Jones矩阵精确计算多级光学元件的累积偏振效应，消光比要求达到10⁻¹⁰量级。",
+        "hook_research": "高精度激光系统（如引力波探测器LIGO）依赖Jones矩阵精确计算多级光学元件的累积偏振效应，消光比要求达到 $10^{-10}$ 量级。",
         "facts": [
           "每个光学元件对应一个特定的Jones矩阵",
           "复数相位精确记录了光的振动信息",
@@ -2889,7 +2887,7 @@
           "imageAlt": "对比图：水波需要水，光波却能穿越1.5亿公里的太空从太阳到达你的眼睛",
           "hook": "水波需要水，声波需要空气。但光穿越1.5亿公里的真空从太阳到达你的眼睛。这怎么可能？",
           "hook_foundation": "往池塘扔块石头——波纹通过水传播开来。喊一声——声波通过空气传播。但太阳光呢？太空里没有空气也没有水！它是怎么到达这里的？",
-          "hook_research": "麦克斯韦方程组预言了自维持的电磁扰动：时变E场感应B场（法拉第定律），B场反过来感应E场（安培-麦克斯韦定律），以 c = 1/√(μ₀ε₀) 的速度在真空中传播。",
+          "hook_research": "麦克斯韦方程组预言了自维持的电磁扰动：时变E场感应B场（法拉第定律），B场反过来感应E场（安培-麦克斯韦定律），以 $c = 1/\\sqrt{\\mu_0 \\epsilon_0}$ 的速度在真空中传播。",
           "facts": [
             "光是电磁波——它通过振荡的电场和磁场自己创造传播的介质",
             "不同的波长（颜色）由不同的振荡频率产生",
@@ -2901,9 +2899,9 @@
             "WiFi、手机信号、X光都是光——只是你眼睛看不见的颜色"
           ],
           "facts_research": [
-            "电磁波满足波动方程 ∇²E = μ₀ε₀∂²E/∂t²，得真空传播速度精确值 c = 299,792,458 m/s",
-            "坡印廷矢量 S = E×H 给出能流密度；强度 I = |S| = ε₀c|E|²/2",
-            "光子能量 E = hf 将经典波量子化，连接了波粒二象性"
+            "电磁波满足波动方程 $\\nabla^2 E = \\mu_0 \\epsilon_0 \\dfrac{\\partial^2 E}{\\partial t^2}$，得真空传播速度精确值 $c = 299,792,458 \\mathrm{m/s}$",
+            "坡印廷矢量 $S = E\\times H$ 给出能流密度；强度 $I = |S| = \\tfrac{1}{2}\\varepsilon_0 c |E|^2$",
+            "光子能量 $E = hf$ 将经典波量子化，连接了波粒二象性"
           ]
         },
         "physics": {
@@ -3014,7 +3012,7 @@
             "偏振太阳镜只挡水平方向——所以能消除水面眩光但让其他光通过"
           ],
           "details_research": [
-            "马吕斯定律描述偏振光通过检偏器的强度：I = I₀cos²θ",
+            "马吕斯定律描述偏振光通过检偏器的强度：$I = I_0 \\cos^2(\\theta)$",
             "正交偏振态在量子层面代表不可区分的光子态",
             "退偏可由散射、多次反射或相干性丧失引起"
           ]
@@ -3185,7 +3183,7 @@
         "physics": {
           "principle": "探索光线如何遵循马吕斯定律与偏振片相互作用",
           "principle_foundation": "光通过第一个偏振片后降到50%。通过成90°的第二个？归零！但通过成45°的第二个，再通过成90°的第三个？有光通过！就像分两步转弯而不是一步急转。",
-          "principle_research": "顺序投影算符不对易：P₉₀P₀ = 0（无透射），但P₉₀P₄₅P₀ ≠ 0。每个偏振片投影到其轴上，强度遵循马吕斯定律：每阶段 I = I₀cos²θ。这例证了测量顺序在决定结果中的作用，与量子态投影直接类比。",
+          "principle_research": "顺序投影算符不对易：P_{90}P_0 = 0（无透射），但P_{90}P_{45}P_0 \u2260 0。每个偏振片投影到其轴上，强度遵循马吕斯定律：每阶段 $I = I_0 \\cos^2(\\theta)$。这例证了测量顺序在决定结果中的作用，与量子态投影直接类比。",
           "details": [
             "调整光源的偏振角度",
             "旋转偏振片观察强度变化",
